@@ -39,20 +39,7 @@ see https://www.gnu.org/licenses/.  */
 #define GCDEXT_1_BINARY_METHOD 2
 #endif
 
-#ifndef USE_ZEROTAB
-#define USE_ZEROTAB 1
-#endif
-
 #if GCDEXT_1_USE_BINARY
-
-#if USE_ZEROTAB
-static unsigned char zerotab[0x40] = {
-  6, 0, 1, 0, 2, 0, 1, 0, 3, 0, 1, 0, 2, 0, 1, 0,
-  4, 0, 1, 0, 2, 0, 1, 0, 3, 0, 1, 0, 2, 0, 1, 0,
-  5, 0, 1, 0, 2, 0, 1, 0, 3, 0, 1, 0, 2, 0, 1, 0,
-  4, 0, 1, 0, 2, 0, 1, 0, 3, 0, 1, 0, 2, 0, 1, 0
-};
-#endif
 
 mp_limb_t
 mpn_gcdext_1 (mp_limb_signed_t *sp, mp_limb_signed_t *tp,
@@ -110,48 +97,20 @@ mpn_gcdext_1 (mp_limb_signed_t *sp, mp_limb_signed_t *tp,
       if (u > v)
 	{
 	  u -= v;
-#if USE_ZEROTAB
-	  count = zerotab [u & 0x3f];
-	  u >>= count;
-	  if (UNLIKELY (count == 6))
-	    {
-	      unsigned c;
-	      do
-		{
-		  c = zerotab[u & 0x3f];
-		  u >>= c;
-		  count += c;
-		}
-	      while (c == 6);
-	    }
-#else
+
 	  count_trailing_zeros (count, u);
 	  u >>= count;
-#endif
+
 	  t0 += t1; t1 <<= count;
 	  s0 += s1; s1 <<= count;
 	}
       else
 	{
 	  v -= u;
-#if USE_ZEROTAB
-	  count = zerotab [v & 0x3f];
-	  v >>= count;
-	  if (UNLIKELY (count == 6))
-	    {
-	      unsigned c;
-	      do
-		{
-		  c = zerotab[v & 0x3f];
-		  v >>= c;
-		  count += c;
-		}
-	      while (c == 6);
-	    }
-#else
+
 	  count_trailing_zeros (count, v);
 	  v >>= count;
-#endif
+
 	  t1 += t0; t0 <<= count;
 	  s1 += s0; s0 <<= count;
 	}
@@ -193,22 +152,8 @@ mpn_gcdext_1 (mp_limb_signed_t *sp, mp_limb_signed_t *tp,
 
       /* Number of trailing zeros is the same no matter if we look at
        * d or u, but using d gives more parallelism. */
-#if USE_ZEROTAB
-      count = zerotab[d & 0x3f];
-      if (UNLIKELY (count == 6))
-	{
-	  unsigned c = 6;
-	  do
-	    {
-	      d >>= c;
-	      c = zerotab[d & 0x3f];
-	      count += c;
-	    }
-	  while (c == 6);
-	}
-#else
       count_trailing_zeros (count, d);
-#endif
+
       det_sign ^= vgtu;
 
       tx = vgtu & (t0 - t1);
